--- a/g33_flask_project/templates/index.html
+++ b/g33_flask_project/templates/index.html
@@ -1,15 +1,15 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Game Hub</title>
-  </head>
-  <body>
-    <div class="login-box">
-      <h1>Welcome to Sports Festival</h1>
-      <a href="/login" class="login-btn">Log In</a>
+
+{% extends 'base.html' %}
+
+{% block title %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
+{% endblock %}
+
+{% block content %}
+
+    <div class="dados">
+        <br><br>
+            <h1>Flask demo PCII</h1>
     </div>
-  </body>
-</html>
+    
+{% endblock %}
